Address Copilot review
Signed-off-by: Ravi Nadahar <nadahar@rediffmail.com>